--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,5 +13,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.15.x
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Run update
         run: go run cmd/generate.go
