--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,5 +15,7 @@ jobs:
           go-version: 1.15.x
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: master
       - name: Run update
         run: go run cmd/generate.go
