set git username and email in action

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,5 +17,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+      - name: Git setup
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
       - name: Run update
         run: go run cmd/generate.go
